# AI-Skill

./: .gitignore  AI-总结文档.docx  readme.txt  技能操作文档.docx
.codebuddy/skills/project-compiler/: OPERATION.md  SKILL.md  SKILL_DOC.md
.codebuddy/skills/project-compiler/assets/: build.bat  build.sh  clean.bat  clean.sh
.codebuddy/skills/project-structure-creator/: OPERATION.md  SKILL.md  SKILL_DOC.md
.codebuddy/skills/project-structure-creator/assets/: CMakeLists.txt  README.md
